ROR-788 Refactor GTFS transformation (#94)